--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "react-dom": "^18.3.1"
   },
   "devDependencies": {
+    "tailwindcss",
+    "postcss",
+    "autoprefixer",
     "@eslint/js": "^9.10.0",
     "@types/react": "^18.3.6",
     "@types/react-dom": "^18.3.0",
